[tool.poetry]
name = "approx"
version = "0.1.0"
description = "Too lazy to quantize? Don't worry! Just tell approx to cast everything automatically!"
license = "Apache-2.0"
authors = ["sudomaze", "xiurobert"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7.13"
tqdm = "^4.64.0"
torch = "^1.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
mypy = "^0.961"
pre-commit = "^2.19.0"
isort = "^5.10.1"
pre-commit-hooks = "^4.3.0"
jupyter = "^1.0.0"

[tool.mypy]
files = ["approx"]
show_error_codes = true
pretty = true

[tool.pytest]
# log_cli = true
addopts = [
    # show summary of all tests that did not pass
    "-ra",
    # idk
    "-s",
    # Make tracebacks shorter
    "--tb=native",
    # enable all warnings
    "-Wd",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 79 # override the default of 88

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"